# Canvas-Accessibility-Audits

./: .gitignore  ToDo.md  accessibility_review_old.csv  config.toml  pyproject.toml
__marimo__/session/: a11y_audit_prototype.py.json
canvas_a11y_audits/: Accessibility_Checklist_mvp.py  __init__.py  a11y_audit_prototype.py  accessibility_checklist_prototype.py
